fix shifting sections with css

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,15 +1,14 @@
 @import './base.css';
 
 #app {
-  max-width: 1260px;
-  margin: 0 auto;
   width: 100%;
-  padding: 10px;
+  margin: 0;
+  padding: 0;
 }
 
 @media screen and (max-width: 905px) {
   #app {
-    padding: 20px;
+    padding: 0;
   }
 }
 
